Correction du commit précédent

--- a/tp_convolution.ipynb
+++ b/tp_convolution.ipynb
@@ -11,10 +11,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 1. Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1. Objectif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "L’objectif de ce TD est de prendre en main la librairie générale (OpenCV) de traitement d’image :\n",
-    "    - Lire et traiter une image, vidéo ou le flux d’une Webcam avec OpenCV\n",
-    "    - Appliquer les compétences en langage Python\n",
-    "    - Programmer certains opérateurs de traitement d'image avec OpenCV"
+    " - Lire et traiter une image, vidéo ou le flux d’une Webcam avec OpenCV\n",
+    " - Appliquer les compétences en langage Python\n",
+    " - Programmer certains opérateurs de traitement d'image avec OpenCV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2. OpenCV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OpenCV est une librairie de traitement d’image qui offre un bon éventail de fonctions intégrées et puissantes. Une description détaillée de ces fonctions est disponible en ligne à l’adresse suivante :\n",
+    "http://docs.opencv.org/master\n",
+    "\n",
+    "Dans ce TD nous allons récupérer le flux vidéo d’une webcam tout en analysant chaque commande pour\n",
+    "bien comprendre leur utilité."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Opérations de base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import de la bibliothèque OpenCV\n",
+    "import cv2\n",
+    "# import de la bibliothèque Numpy\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1. Création et manipulation d’images avec Python et OpenCV."
    ]
   },
   {
@@ -23,10 +81,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 2\n",
-    "b = 3\n",
-    "print(a+b)"
+    "# Définition de l'image noir en 128x128\n",
+    "img = np.zeros((128,128,3),np.uint8)\n",
+    "\n",
+    "# Afficher la matrice correspondante dans la console\n",
+    "# print(img)\n",
+    "\n",
+    "# Affichage de l'image\n",
+    "cv2.imshow(\"Image\",img)\n",
+    "\n",
+    "# Attente d'un entrée clavier utilisateur quelconque\n",
+    "cv2.waitKey(0)\n",
+    "\n",
+    "# Ferme la fenêtre où étaient affichée l'image\n",
+    "cv2.destroyWindow(\"Image\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2  Modifiez ce code pour afficher trois images de taille 512*512 respectivement de couleur Rouge, Verte et Bleue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On définit une fonction qui permet de générer une image d'une certaine taille, d'une certaine couleur sous forme de tableau numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import de l'objet Tuple qui servira à représenter un vecteur 3D (couleur)\n",
+    "from typing import Tuple\n",
+    "\n",
+    "def createRgbColorImg(width, height, rgb_color=(0, 0, 0)):\n",
+    "    # Création d'une image noire\n",
+    "    image = np.zeros((height, width, 3), np.uint8)\n",
+    "\n",
+    "    # OpenCV utilise le format BGR (Blue, Green, Red) pour encoder les pixels\n",
+    "    # Conversion d'une couleur RGB en une couleur BGR\n",
+    "    color = tuple(reversed(rgb_color))\n",
+    "\n",
+    "    # Applique la couleur BGR à chaque pixel de l'image\n",
+    "    image[:] = color\n",
+    "\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puis on l'utilise pour créer et afficher les 3 images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Définition des 3 images Rouge, Verte et Bleue\n",
+    "img_red = createRgbColorImg(512, 512, (255, 0, 0))\n",
+    "img_green = createRgbColorImg(512, 512, (0, 255, 0))\n",
+    "img_blue = createRgbColorImg(512, 512, (0, 0, 255))\n",
+    "\n",
+    "# Affichage des 3 Images\n",
+    "cv2.imshow(\"Image_rouge\", img_red)\n",
+    "cv2.imshow(\"Image_verte\", img_green)\n",
+    "cv2.imshow(\"Image_bleue\", img_blue)\n",
+    "\n",
+    "# Attente d'un entrée clavier utilisateur quelconque\n",
+    "cv2.waitKey(0)\n",
+    "\n",
+    "# Ferme toutes les fenêtres où étaient affichées les images\n",
+    "cv2.destroyWindow(\"Image_rouge\")\n",
+    "cv2.destroyWindow(\"Image_verte\")\n",
+    "cv2.destroyWindow(\"Image_bleue\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
