--- a/tp_convolution.ipynb
+++ b/tp_convolution.ipynb
@@ -167,6 +167,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  2.3. Insérez des lignes, rectangles, cercles et du texte dans ces images "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il existe des fonctions natives de la librairie pour :\n",
+    "- Dessiner une ligne (https://docs.opencv.org/2.4/modules/core/doc/drawing_functions.html#cv2.line)\n",
+    "- Dessiner un rectangle (https://docs.opencv.org/2.4/modules/core/doc/drawing_functions.html#rectangle)\n",
+    "- Dessiner un cercle (https://docs.opencv.org/2.4/modules/core/doc/drawing_functions.html#circle)\n",
+    "- Dessiner du texte (https://docs.opencv.org/2.4/modules/core/doc/drawing_functions.html#puttext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Définition d'une image noire\n",
+    "img_23 = createRgbColorImg(512, 512)\n",
+    "\n",
+    "# Dessine la diagonale rouge d'en haut à gauche jusqu'en bas à droite\n",
+    "cv2.line(img_23, (0, 0), (512, 512), (0, 0, 255))\n",
+    "\n",
+    "# Dessine un rectangle vert au centre de l'image \n",
+    "cv2.rectangle(img_23, (128, 128), (384, 384), (0, 255, 0))\n",
+    "\n",
+    "# Dessine un cercle bleu au centre de l'image de 128 de rayon\n",
+    "cv2.circle(img_23, (256, 256), 128, (255, 0, 0))\n",
+    "\n",
+    "# Dessine un texte au centre de l'image\n",
+    "cv2.putText(img_23, 'texte', (220, 256), cv2.FONT_HERSHEY_PLAIN, 1.5, (0, 125, 0))\n",
+    "\n",
+    "# Affichage de l'image avec la ligne, le cercle et le rectangle\n",
+    "cv2.imshow(\"Image_2.3\", img_23)\n",
+    "\n",
+    "# Attente d'un entrée clavier utilisateur quelconque\n",
+    "cv2.waitKey(0)\n",
+    "\n",
+    "# Ferme la fenêtre de l'image avec la ligne, le cercle et le rectangle\n",
+    "cv2.destroyWindow(\"Image_2.3\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
