--- a/tp_convolution.ipynb
+++ b/tp_convolution.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,6 +217,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##QUESTION 3\n",
+    "\n",
+    "#ROUGE\n",
+    "imgRouge = np.zeros((512,512,3),np.uint8)\n",
+    "for i in range(len(imgRouge)):\n",
+    "#     print(imgRouge[i])\n",
+    "    for j in range(len(imgRouge[i])):\n",
+    "        imgRouge[i][j]=[0,0,255]\n",
+    "        \n",
+    "#VERT\n",
+    "imgVert = np.zeros((512,512,3),np.uint8)\n",
+    "for i in range(len(imgVert)):\n",
+    "#     print(imgVert[i])\n",
+    "    for j in range(len(imgVert[i])):\n",
+    "        imgVert[i][j]=[0,255,0]\n",
+    "        \n",
+    "#BLEU\n",
+    "imgBleu = np.zeros((512,512,3),np.uint8)\n",
+    "for i in range(len(imgBleu)):\n",
+    "#     print(imgBleu[i])\n",
+    "    for j in range(len(imgBleu[i])):\n",
+    "        imgBleu[i][j]=[255,0,0]\n",
+    "    \n",
+    "# print(imgBleu) # pour afficher dans la console\n",
+    "# print(img) # pour afficher dans la console\n",
+    "\n",
+    "#LIGNE SUR IMAGE ROUGE\n",
+    "start_point = (0, 0)\n",
+    "end_point = (220, 220)\n",
+    "color = (0, 0, 0)\n",
+    "thickness = 9\n",
+    "imgRouge = cv2.line(imgRouge, start_point, end_point, color, thickness) \n",
+    "\n",
+    "#RECTANGLE SUR IMAGE VERTE\n",
+    "start_point2 = (500, 500)\n",
+    "end_point2 = (500, 500)\n",
+    "color = (255, 0, 0)\n",
+    "thickness = 5\n",
+    "imgVert = cv2.rectangle(imgVert, start_point, end_point, color, thickness)\n",
+    "\n",
+    "#CERCLE SUR IMAGE BLEU\n",
+    "center_coordinates = (120, 100)\n",
+    "radius = 50\n",
+    "color = (0, 0, 0)\n",
+    "thickness = 9\n",
+    "imgBleu = cv2.circle(imgBleu, center_coordinates, radius, color, thickness)\n",
+    "\n",
+    "#TEXT SUR IMAGE ROUGE\n",
+    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "org = (150, 50)\n",
+    "fontScale = 1\n",
+    "color = (255, 0, 0)\n",
+    "thickness = 2\n",
+    "imgRouge = cv2.putText(imgRouge, 'Hello', org, font, \n",
+    "                   fontScale, color, thickness, cv2.LINE_AA)\n",
+    "   \n",
+    "\n",
+    "cv2.imshow(\"ImageRouge\",imgRouge)\n",
+    "cv2.imshow(\"ImageVert\",imgVert)\n",
+    "cv2.imshow(\"ImageBleu\",imgBleu)\n",
+    "\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyWindow(\"ImageRouge\")\n",
+    "cv2.destroyWindow(\"ImageVert\")\n",
+    "cv2.destroyWindow(\"ImageBleu\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -239,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
