Ajout du nom de l'équipe

--- a/Machine Learning pour l'image.ipynb
+++ b/Machine Learning pour l'image.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# TD_Machine Learning_Python et OpenCV\n",
+    "## Equipe 11 : Céline NGUYEN, Pierre LEBAS, Thibault VERDIER et Pierre MESTRE\n",
+    "\n",
     "## 1. Introduction\n",
     "### 1.1 Objectif\n",
     "L’objectif de ce TD est de prendre en main des outils et techniques de « Machine Learning » pour le\n",
