Finalisation de KNN

--- a/RK_ML_python/KNN.ipynb
+++ b/RK_ML_python/KNN.ipynb
@@ -6,7 +6,8 @@
     "id": "cJ1It1fl_kWH"
    },
    "source": [
-    "## Télécharger le dataset\n",
+    "# Récupération du dataset\n",
+    "## Téléchargement\n",
     "Si la commande gdown n'est pas reconnu, il faut l'installer :\n",
     "__pip install gdown__"
    ]
@@ -52,6 +53,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vérification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -78,7 +86,7 @@
     "id": "REGBZcte_tRK"
    },
    "source": [
-    "## Charger le dataset dans une liste"
+    "# Construction du dataset"
    ]
   },
   {
@@ -117,6 +125,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mélange le dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -139,7 +154,7 @@
     "id": "EOY3raHxJZ-p"
    },
    "source": [
-    "## Affichage d'élément du dataset"
+    "## Affichage de 9 éléments du dataset"
    ]
   },
   {
@@ -150,22 +165,21 @@
    },
    "outputs": [],
    "source": [
-    "# Librairie permettant notamment d'afficher proprement des images, graphiques, etc..\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Renvoie un objet Figure, fig, et un tableau d'Axes\n",
     "# fig correspond au conteneur de tous les éléments\n",
     "# axs correspond à un tableau représentant les sous-parties de la figure\n",
     "# Ici la Figure sera divisé en 9 cases (9 Axes)\n",
     "fig, axs = plt.subplots(3, 3, figsize = (12, 12))\n",
+    "\n",
     "# Modifie le mappage des couleurs des plots en gris\n",
     "plt.gray()\n",
     "\n",
     "# Description de dataset\n",
-    "#   dataset[i] = [matrice, dossier]\n",
-    "#   dataset[i][j] = matrice\n",
-    "#   dataset[i][j][k] = ligne k de la matrice\n",
-    "#   dataset[i][j][k][l] = pixel aux coordonnées [k;l] de la matrice\n",
+    "#   dataset[i] = (matrice, dossier)\n",
+    "#   dataset[i][0] = matrice\n",
+    "#   dataset[i][1] = dossier\n",
+    "#   dataset[i][0][j] = ligne j de la matrice\n",
+    "#   dataset[i][0][j][k] = pixel aux coordonnées [j;k] de la matrice\n",
     "for i, ax in enumerate(axs.flat):\n",
     "    # Place dans Axe dans la matrice de l'image i\n",
     "    ax.imshow(dataset[i][0])\n",
@@ -173,7 +187,8 @@
     "    ax.axis('off')\n",
     "    # Ajoute un titre, celui du dossier auquel appartient l'image\n",
     "    ax.set_title(dataset[i][1])\n",
-    "# Affiche la Figure\n",
+    "\n",
+    "print(\"Affiche les 9 premières images du dataset\")\n",
     "plt.show()"
    ]
   },
@@ -183,7 +198,8 @@
     "id": "nP4U_YY9nddo"
    },
    "source": [
-    "## Define Feature Extractor"
+    "# Construction du modèle\n",
+    "## Définition d'extracteurs de features (variables caractéristiques)"
    ]
   },
   {
@@ -192,7 +208,7 @@
     "id": "95j71HpVpN6e"
    },
    "source": [
-    "### Raw pixel values\n",
+    "### Features à partir de l'image brut\n",
     "Définition d'une fonction qui transforme une image en une feature pour modèle ML"
    ]
   },
@@ -225,7 +241,7 @@
     "id": "N-Zy2dPypTW8"
    },
    "source": [
-    "### Histogram\n",
+    "### Features à partir de l'histogramme de l'image brut\n",
     "Définition d'une fonction qui récupère l'histogramme d'une image et le transforme une feature pour modèle ML"
    ]
   },
@@ -265,7 +281,7 @@
     "id": "zUAFZpoSphqk"
    },
    "source": [
-    "## Feature extraction"
+    "### Initialisation"
    ]
   },
   {
@@ -286,6 +302,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extraction des features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -295,9 +318,19 @@
    "source": [
     "print(\"Séparation des features et des labels\")\n",
     "for (image, label) in dataset:\n",
-    "    rawImages.append(image.flatten())\n",
-    "    features.append(extract_color_histogram(image).flatten())\n",
+    "    # Construction de features avec les images bruts redimensionnées en 32x32\n",
+    "    rawImages.append(image_to_feature_vector(image))\n",
+    "    # Construction de features avec l'histogramme des images bruts\n",
+    "    features.append(extract_color_histogram(image))\n",
+    "    # Construction d'un tableau avec les labels\n",
     "    labels.append(labels_classes_mapping[label])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mise en forme et vérification"
    ]
   },
   {
@@ -310,7 +343,7 @@
    "source": [
     "# Transformation des tableaux en tableau numpy\n",
     "rawImages = np.array(rawImages)\n",
-    "features = np.array(features, dtype=object) \n",
+    "features = np.array(features)\n",
     "labels = np.array(labels)\n",
     "\n",
     "# Affiche la forme des tableau (nbCases1D, nbCases2D, ..., nbCasesND)\n",
@@ -325,7 +358,7 @@
     "id": "_c_ZcIG0ryXt"
    },
    "source": [
-    "## Split Train/Test"
+    "### Séparation de la base de test et la base d'entraînement"
    ]
   },
   {
@@ -336,12 +369,12 @@
    },
    "outputs": [],
    "source": [
-    "# TODO\n",
+    "# train_test_split diviser notre ensemble de données en sous-ensembles qui minimisera le risque de biais dans notre processus d'évaluation et de validation.\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "print(\"Création de données d'entraînement avec les images bruts..\")\n",
+    "print(\"Création de données d'entraînement avec les images bruts redimensionnées..\")\n",
     "(trainRawX, testRawX, trainRawY, testRawY) = train_test_split(rawImages, labels, test_size=0.25, random_state=42)\n",
-    "print(\"Création de données d'entraînement avec l'histogramme de l'image redimensionnée en 32x32..\")\n",
+    "print(\"Création de données d'entraînement avec l'histogramme de l'image..\")\n",
     "(trainFeatX, testFeatX, trainFeatY, testFeatY) = train_test_split(features, labels, test_size=0.25, random_state=42)"
    ]
   },
@@ -351,7 +384,7 @@
     "id": "8cMjK37DsF-x"
    },
    "source": [
-    "## KNN "
+    "### Utilisation d'un modèle KNN "
    ]
   },
   {
@@ -362,11 +395,11 @@
    },
    "outputs": [],
    "source": [
-    "# TO DO\n",
+    "# KNeighborsClassifier permet de classifier les données dans un modèle à l'aide de l'algorithme des k plus proches voisins\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "model = KNeighborsClassifier(n_neighbors=100, n_jobs=-1)\n",
-    "print(\"Entraînement du modèle RAW..\")\n",
+    "print(\"Entraînement du modèle avec les images bruts redimensionnées en 32x32..\")\n",
     "model.fit(trainRawX, trainRawY)\n",
     "acc = model.score(testRawX, testRawY)\n",
     "print(\"raw pixel accuracy: {:.2f}%\".format(acc * 100))"
@@ -381,10 +414,17 @@
    "outputs": [],
    "source": [
     "model = KNeighborsClassifier(n_neighbors=100, n_jobs=-1)\n",
-    "print(\"Entraînement du modèle 32x32..\")\n",
+    "print(\"Entraînement du modèle avec l'histogramme des images..\")\n",
     "model.fit(trainFeatX, trainFeatY)\n",
     "acc = model.score(testFeatX, testFeatY)\n",
     "print(\"histogram accuracy: {:.2f}%\".format(acc * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Après exécution des deux modèles, on se rend compte que le modèle le plus efficace est celui dont les données d'entrée était l'"
    ]
   }
  ],
