--- a/RK_ML_python/KNN.ipynb
+++ b/RK_ML_python/KNN.ipynb
@@ -14,22 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "SbtX_4lF_rvD"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?id=1sQEIPh3bdKQ_1J3g0Z8CRqD6uU7v746l\n",
-      "To: /home/v/Documents/Dev/PythonProjects/Notebooks/dataset.zip\n",
-      "100%|████████████████████████████████████████| 236M/236M [00:08<00:00, 27.0MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!gdown --id 1sQEIPh3bdKQ_1J3g0Z8CRqD6uU7v746l"
    ]
@@ -43,13 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "qEWzAzHYFI6B"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  dataset.zip\r\n"
+     ]
+    }
+   ],
    "source": [
-    "!unzip dataset.zip -u"
+    "!unzip -u dataset.zip"
    ]
   },
   {
@@ -117,7 +114,7 @@
     "        # Incrémente le nombre d'image utilisées dans le dataset\n",
     "        count = count + 1\n",
     "        # Indique que l'on lit l'image <filename>\n",
-    "        print(str(count) + \" ---loading \" + filename)\n",
+    "        # print(str(count) + \" ---loading \" + filename)\n",
     "        # Lecture de l'image\n",
     "        image = cv2.imread(os.path.join(\"./flowers/\",label,filename))\n",
     "        # Ajout au dataset de l'image associée à son dossier\n",
@@ -195,26 +192,18 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "nP4U_YY9nddo"
-   },
-   "source": [
-    "# Construction du modèle\n",
-    "## Définition d'extracteurs de features (variables caractéristiques)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "95j71HpVpN6e"
    },
    "source": [
+    "# Construction du modèle\n",
+    "## Définition d'extracteurs de features (variables caractéristiques)\n",
     "### Features à partir de l'image brut\n",
     "Définition d'une fonction qui transforme une image en une feature pour modèle ML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "REKfg99ooTpo"
    },
@@ -281,6 +270,7 @@
     "id": "zUAFZpoSphqk"
    },
    "source": [
+    "## Pré-Traitement\n",
     "### Initialisation"
    ]
   },
@@ -384,7 +374,7 @@
     "id": "8cMjK37DsF-x"
    },
    "source": [
-    "### Utilisation d'un modèle KNN "
+    "## Utilisation d'un modèle KNN "
    ]
   },
   {
@@ -424,8 +414,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Après exécution des deux modèles, on se rend compte que le modèle le plus efficace est celui dont les données d'entrée était l'"
+    "Après exécution des deux modèles, on se rend compte que le modèle le plus efficace est celui dont les données d'entrée était l'histogramme des images"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -435,7 +432,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
