--- a/RK_ML_python/KNN.ipynb
+++ b/RK_ML_python/KNN.ipynb
@@ -6,6 +6,8 @@
     "id": "cJ1It1fl_kWH"
    },
    "source": [
+    "# IN7 - IA pour l'image\n",
+    "## Equipe 11 - Céline NGUYEN, Pierre LEBAS, Thibault VERDIER et Pierre MESTRE\n",
     "# Récupération du dataset\n",
     "## Téléchargement\n",
     "Si la commande gdown n'est pas reconnu, il faut l'installer :\n",
