--- a/RK_ML_python/SVM.ipynb
+++ b/RK_ML_python/SVM.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# IN7 - IA pour l'image\n",
-    "## Equipe 11 - Céline NGUYEN, Pierre LEBAS et Thibault VERDIER\n",
+    "## Equipe 11 - Céline NGUYEN, Pierre LEBAS, Thibault VERDIER et Pierre MESTRE\n",
     "# Récupération du dataset\n",
     "## Téléchargement\n",
     "Si la commande gdown n'est pas reconnu, il faut l'installer :\n",
